# job-search-agent

./: .env.example  .gitignore  DECISIONS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: .gitkeep  ci.yml  migrate-postgres.yml  scan.yml
app/: __init__.py  cli.py  config.py  db.py  models.py  postgres.py  recency.py
app/adapters/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  manual.py  smartrecruiters.py  utils.py
app/prompts/: role_evaluation_v1.md
app/repositories/: .gitkeep
app/services/: benchmark.py  digest.py  evaluate.py  export_csv.py  ingest.py  live_noise.py  llm_evaluator.py  manual_intake.py  material.py  (+5 more)
config/: candidate_profile.yaml  location_policy.yaml  recency_policy.yaml  relevance_filter.yaml  scoring_policy.yaml  watchlist.yaml
data/: Job Search Tracker.xlsx
docs/: BACKLOG.md  Cato_Reviewer_Charter.md  HANDOFF.md  PLAN_1.5_to_2.0.md  PRD.md  STAGE2_SCOPE.md  STATUS.md  architecture.md  design-brief.md  evaluation.md  source_coverage_audit.md  source_coverage_expansion_audit_2026-07-12.md  team-operating-brief.md
migrations/: .gitkeep  001_stage15_core.sql  002_stage15_supabase_auth.sql  003_stage15_applications.sql  004_stage15_shortlist.sql  005_stage15_evaluator_v3.sql  006_stage15_versioned_evaluation_skips.sql  007_stage19_evaluator_v4.sql  008_stage15_manual_intake.sql  009_stage15_manual_intake_controls.sql
output/: source_coverage.csv
scripts/: export_csv.py  import_tracker.py
tests/: __init__.py
web/: .env.example  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
(+142 files in other folders)
