[project]
name = "job-search-agent"
version = "0.1.0"
description = "Private human-in-the-loop job search discovery agent."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
job-agent = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
